# TP_Projekt3

./: CMakeLists.txt  main.cpp
raport/: sprawko.ipynb
